HW4/javali_tests/Filip/Registers.javali.err
Debug information for file: javali_tests/Filip/Registers.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: v1, type: int)
| | | VarDecl (name: v2, type: int)
| | | VarDecl (name: v3, type: int)
| | | VarDecl (name: v4, type: int)
| | | VarDecl (name: a, type: int[])
| | Seq ()
| | | Assign ()
| | | | Var (name: a)
| | | | NewArray (typeName: int[])
| | | | | IntConst (value: 3)
| | | Assign ()
| | | | Index ()
| | | | | Var (name: a)
| | | | | IntConst (value: 0)
| | | | IntConst (value: 0)
| | | Assign ()
| | | | Index ()
| | | | | Var (name: a)
| | | | | IntConst (value: 1)
| | | | IntConst (value: 2)
| | | Assign ()
| | | | Index ()
| | | | | Var (name: a)
| | | | | IntConst (value: 4)
| | | | IntConst (value: 2)
| | | IfElse ()
| | | | BinaryOp (operator: B_EQUAL)
| | | | | Index ()
| | | | | | Var (name: a)
| | | | | | IntConst (value: 1)
| | | | | Index ()
| | | | | | Var (name: a)
| | | | | | IntConst (value: 2)
| | | | Seq ()
| | | | | BuiltInWrite ()
| | | | | | IntConst (value: 1)
| | | | Seq ()
| | | | | BuiltInWrite ()
| | | | | | IntConst (value: 0)
Binary Op: ((a[1] == a[2]))@3ea34b3 (%edx,%esi)

Phase exec failed because we expected to see:
Error: 3

But we actually saw:
0
The difference is:
At line   1 /   1:
< Error: 3
> 0

